Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-107120

QSqlDatabase not working with SQLite files from QFileDialog

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.7.0 FF
    • 6.4.0
    • SQL Support
    • None
    • Android
    • e84dc809e (dev), 50f24f715 (dev)

      QSqlDatabase::setDatabaseName() does not work with file paths returned from QFileDialog::getOpenFileName(). This makes Qt unusable for opening user provided SQLite data files on Android.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            taipan BogDan Vatra
            tumic Martin Tůma
            Votes:
            2 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes